--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,7 +55,20 @@
 		<param-value>http://192.168.50.53:9090/javaclass</param-value>
 	</context-param>
    
-   
+   <!-- 
+   <error-page>
+   	<error-code>404</error-code>
+   	<location>/errorMSG/errorMessage404.jsp</location>
+   </error-page>
+   <error-page>
+   	<error-code>405</error-code>
+   	<location>/errorMSG/errorMessage404.jsp</location>
+   </error-page>
+   <error-page>
+   	<error-code>500</error-code>
+   	<location>/errorMSG/errorMessage500.jsp</location>
+   </error-page>
+    -->
    
    <!-- Fliter처리 (Controller 앞단에서 제어(처리)한다. -->
    <!-- 
